--- a/index.html
+++ b/index.html
@@ -47,39 +47,42 @@
 
             <div
                 style=" width: 100%;  height: 100%; position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -1; opacity: 0.5;">
-                <img style="width: 100%; height: 100%; object-fit: cover;" src="./assets/images/pictures/imgPic3.jpg" />
+                <img style="width: 100%; height: 100%; object-fit: cover;" src="./assets/images/pictures/imgPic1.jpg" />
             </div>
 
             <h1>Hey there...</h1>
             <p id="name">SARAVANA KUMAR K R</p>
             <p id="about-me">Mobile application developer with 4y 9m experience</p>
         </div>
+
         <div id="education-details">
-            <h1 class="section-heading">Education Details:</h1>
+            <h1 class="section-heading main-heading">Education Details:</h1>
             <div>
-                <h1>B.Tech - Computer Science - from Kerala University</h1>
-                <h2> I studied at UKF College of Engineering and Technology affiliated to Kerala University and secured
+                <h1 class="education-sub-heading">B.Tech - Computer Science - from Kerala University</h1>
+                <h2 class="education-description"> I studied at UKF College of Engineering and Technology affiliated to
+                    Kerala University and secured
                     a score of 6.3 CGPA</h2>
             </div>
 
             <div>
-                <h1>12th - Science - Maths -Computer Science - CBSE</h1>
-                <h2> I studied at Sree Narayana Trusts Central School, Kollam securing
+                <h1 class="education-sub-heading">12th - Science - Maths -Computer Science - CBSE</h1>
+                <h2 class="education-description"> I studied at Sree Narayana Trusts Central School, Kollam securing
                     a score of 67%</h2>
             </div>
 
             <div>
-                <h1>10th - Science - Maths - CBSE</h1>
-                <h2> I studied at Sree Narayana Trusts Central School, Kollam securing
+                <h1 class="education-sub-heading">10th - Science - Maths - CBSE</h1>
+                <h2 class="education-description"> I studied at Sree Narayana Trusts Central School, Kollam securing
                     a score of 77%</h2>
             </div>
         </div>
+
         <div id="work-details">
-            <h1 class="section-heading">Work Details:</h1>
+            <h1 class="section-heading main-heading">Work Details:</h1>
             <div>
-                <h1>Experion Technologies, Technopark, Trivandrum</h1>
-                <h2>Mobile Application Developer</h2>
-                <h4>Feb 2019 - present(1y 1m)</h4>
+                <h1 class="work-details-sub-heading">Experion Technologies, Technopark, Trivandrum</h1>
+                <h2 class="work-details-sub-heading">Mobile Application Developer</h2>
+                <h4 class="work-details-duration">Feb 2019 - present(1y 1m)</h4>
 
                 <div class="projects-container">
                     <h2>projects:</h2>
@@ -90,17 +93,17 @@
                             <h3>A React-Native application for people with dementia to help with activities in their
                                 life with
                                 the help of a virtual support partner.</h3>
-                            <ul>
-                                <li>
-                                    <a href="https://apps.apple.com/us/app/maphabit/id1466187296">iOS</a>
-                                </li>
-                                <li>
 
-                                    <a
-                                        href="https://play.google.com/store/apps/details?id=com.maphabitmobileapp&hl=en_IN">Android</a>
+                            <div>
+                                <a href="https://apps.apple.com/us/app/maphabit/id1466187296">
+                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                </a>
+                                <a href="https://play.google.com/store/apps/details?id=com.maphabitmobileapp&hl=en_IN">
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./assets/images/icons/iconAndroid.png" />
+                                </a>
+                            </div>
 
-                                </li>
-                            </ul>
                         </div>
 
                     </div>
@@ -109,9 +112,9 @@
 
 
             <div>
-                <h1>Zoondia Software, Technopark, Trivandrum</h1>
-                <h2>iOS & Android Mobile Application Developer</h2>
-                <h4>Dec 2015 – Feb 2019(3y 3m)</h4>
+                <h1 class="work-details-sub-heading">Zoondia Software, Technopark, Trivandrum</h1>
+                <h2 class="work-details-sub-heading">iOS & Android Mobile Application Developer</h2>
+                <h4 class="work-details-duration">Dec 2015 – Feb 2019(3y 3m)</h4>
 
                 <div class="projects-container">
                     <h2>projects:</h2>
@@ -138,11 +141,13 @@
                             <h3>A professional social networking iOS application where you could publicize job openings
                                 if you are an entrepreneur, or market your skills as a job seeker using Videos as the
                                 media of communication.</h3>
-                            <ul>
-                                <li>
-                                    <a href="https://apps.apple.com/il/app/bizclips/id1315696803">iOS</a>
-                                </li>
-                            </ul>
+
+                            <div>
+                                <a href="https://apps.apple.com/il/app/bizclips/id1315696803">
+                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                </a>
+
+                            </div>
                         </div>
 
                         <div>
@@ -156,18 +161,17 @@
                             <h2>HASANAT</h2>
                             <h3>An application used for donation based crowdfunding for middle east location. It
                                 includes features like Payment Gateway.</h3>
-                            <ul>
-                                <li>
-                                    <a
-                                        href="https://apps.apple.com/us/app/%D8%AD%D8%B3%D9%86%D8%A7%D8%AA-hasanat/id1223319991">iOS</a>
-                                </li>
-                                <li>
 
-                                    <a
-                                        href="https://play.google.com/store/apps/details?id=com.applab.hasanat&hl=en_IN">Android</a>
-
-                                </li>
-                            </ul>
+                            <div>
+                                <a
+                                    href="https://apps.apple.com/us/app/%D8%AD%D8%B3%D9%86%D8%A7%D8%AA-hasanat/id1223319991">
+                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                </a>
+                                <a href="https://play.google.com/store/apps/details?id=com.applab.hasanat&hl=en_IN">
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./assets/images/icons/iconAndroid.png" />
+                                </a>
+                            </div>
                         </div>
 
                         <div>
@@ -180,27 +184,28 @@
                             <h2>QATAR CANCER SOCIETY</h2>
                             <h3>An application used for donation based crowdfunding for middle east location. It
                                 includes features like Payment Gateway.</h3>
-                            <ul>
-                                <li>
-                                    <a href="https://apps.apple.com/us/app/qatar-cancer-society/id1448365698">iOS</a>
-                                </li>
-                                <li>
-                                    <a
-                                        href="https://play.google.com/store/apps/details?id=com.applab.QCS&hl=en_US">Android</a>
 
-                                </li>
-                            </ul>
+                            <div>
+                                <a href="https://apps.apple.com/us/app/qatar-cancer-society/id1448365698">
+                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                </a>
+                                <a href="https://play.google.com/store/apps/details?id=com.applab.QCS&hl=en_US">
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./assets/images/icons/iconAndroid.png" />
+                                </a>
+                            </div>
                         </div>
 
                         <div>
                             <h2>YOU GOT A GIFT</h2>
                             <h3>An iOS application to send gift cards to your friends and family to use in authorised
                                 stores.</h3>
-                            <ul>
-                                <li>
-                                    <a href="https://apps.apple.com/ae/app/yougotagift-com/id1003784085">iOS</a>
-                                </li>
-                            </ul>
+
+                            <div>
+                                <a href="https://apps.apple.com/ae/app/yougotagift-com/id1003784085">
+                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                </a>
+                            </div>
                         </div>
 
                         <div>
@@ -208,16 +213,16 @@
                             <h3>A client application for customers who are subscribed to DietHub services. It includes a
                                 private virtual online coach to monitor your health and diet. Also includes personal
                                 chat.</h3>
-                            <ul>
-                                <li>
-                                    <a href="https://itunes.apple.com/qa/app/diethub/id1220736852?mt=8)">iOS</a>
-                                </li>
-                                <li>
-                                    <a
-                                        href="https://play.google.com/store/apps/details?id=com.makers.diethub">Android</a>
 
-                                </li>
-                            </ul>
+                            <div>
+                                <a href="https://itunes.apple.com/qa/app/diethub/id1220736852?mt=8)">
+                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                </a>
+                                <a href="https://play.google.com/store/apps/details?id=com.makers.diethub">
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./assets/images/icons/iconAndroid.png" />
+                                </a>
+                            </div>
                         </div>
 
                         <div>
@@ -225,16 +230,16 @@
                             <h3>A client application for Coach who act as virtual coaches to DietHub users, having
                                 featured to set diet and monitor them including personal chat (audio, image, text) for
                                 communication.</h3>
-                            <ul>
-                                <li>
-                                    <a href="https://itunes.apple.com/qa/app/diethub-coach/id1257393544?mt=8">iOS</a>
-                                </li>
-                                <li>
-                                    <a
-                                        href="https://play.google.com/store/apps/details?id=com.makers.diethubcoach">Android</a>
 
-                                </li>
-                            </ul>
+                            <div>
+                                <a href="https://itunes.apple.com/qa/app/diethub-coach/id1257393544?mt=8">
+                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                </a>
+                                <a href="https://play.google.com/store/apps/details?id=com.makers.diethubcoach">
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./assets/images/icons/iconAndroid.png" />
+                                </a>
+                            </div>
                         </div>
 
                     </div>
@@ -242,9 +247,9 @@
             </div>
 
             <div>
-                <h1>DHI Logics, Kaloor, Ernakulam</h1>
-                <h2>Javascript Developers</h2>
-                <h4>April 2015 – Oct 2015(5m)</h4>
+                <h1 class="work-details-sub-heading">DHI Logics, Kaloor, Ernakulam</h1>
+                <h2 class="work-details-sub-heading">Javascript Developers</h2>
+                <h4 class="work-details-duration">April 2015 – Oct 2015(5m)</h4>
 
                 <div class="projects-container">
                     <h2>projects:</h2>
@@ -263,8 +268,8 @@
             </div>
 
             <div>
-                <h1>FREELANCE CONSULTANT since graduation</h1>
-                <h2>iOS, Android and React-Native.</h2>
+                <h1 class="work-details-sub-heading">FREELANCE CONSULTANT since graduation</h1>
+                <h2 class="work-details-sub-heading">iOS, Android and React-Native.</h2>
 
                 <div class="projects-container">
                     <h2>projects:</h2>
@@ -275,28 +280,29 @@
                             <h3>An iOS application to be used by employees and residents of OnePort settlements in Qatar
                                 for flat
                                 maintenance.</h3>
-                            <ul>
-                                <li>
-                                    <a href="https://apps.apple.com/us/app/oneport/id1486790154">iOS</a>
-                                </li>
-                            </ul>
+
+                            <div>
+                                <a href="https://apps.apple.com/us/app/oneport/id1486790154">
+                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                </a>
+                            </div>
                         </div>
 
                         <div>
                             <h2>AL JNOUB</h2>
                             <h3>A React-Native application to reserve camping ground in the southern reserve of Qatar.
                             </h3>
-                            <ul>
-                                <li>
-                                    <a href="https://apps.apple.com/in/app/%D9%85%D8%AD%D9%85%D9%8A%D8%A9-%D8%A7%D9%84%D
-                                        8%AC%D9%86%D9%88%D8%A8/id1440043523">iOS</a>
-                                </li>
-                                <li>
-                                    <a
-                                        href="https://play.google.com/store/apps/details?id=com.applab.aljnoub">Android</a>
 
-                                </li>
-                            </ul>
+                            <div>
+                                <a href="https://apps.apple.com/in/app/%D9%85%D8%AD%D9%85%D9%8A%D8%A9-%D8%A7%D9%84%D
+                                8%AC%D9%86%D9%88%D8%A8/id1440043523">
+                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                </a>
+                                <a href="https://play.google.com/store/apps/details?id=com.applab.aljnoub">
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./assets/images/icons/iconAndroid.png" />
+                                </a>
+                            </div>
                         </div>
 
                         <div>
@@ -311,7 +317,7 @@
 
 
         <div id="hobbies">
-            <h1 class="section-heading">Hobbies:</h1>
+            <h1 class="section-heading main-heading">Hobbies:</h1>
 
             <ul>
                 <li>
