Style change and spelling correction

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <div id="education-details">
-            <h1 class="section-heading main-heading">Education Details:</h1>
+            <h1 class=" main-heading">Education Details:</h1>
             <div>
                 <h1 class="education-sub-heading">B.Tech - Computer Science - from Kerala University</h1>
                 <h2 class="education-description"> I studied at UKF College of Engineering and Technology affiliated to
@@ -78,14 +78,14 @@
         </div>
 
         <div id="work-details">
-            <h1 class="section-heading main-heading">Work Details:</h1>
+            <h1 class=" main-heading">Work Details:</h1>
             <div>
                 <h1 class="work-details-sub-heading">Experion Technologies, Technopark, Trivandrum</h1>
                 <h2 class="work-details-sub-heading">Mobile Application Developer</h2>
                 <h4 class="work-details-duration">Feb 2019 - present(1y 1m)</h4>
 
                 <div class="projects-container">
-                    <h2>projects:</h2>
+                    <h2 class="projects-text">projects:</h2>
                     <div class="projects-sub-container-right">
 
                         <div>
@@ -117,7 +117,7 @@
                 <h4 class="work-details-duration">Dec 2015 – Feb 2019(3y 3m)</h4>
 
                 <div class="projects-container">
-                    <h2>projects:</h2>
+                    <h2 class="projects-text">projects:</h2>
                     <div class="projects-sub-container-right">
 
                         <div>
@@ -252,7 +252,7 @@
                 <h4 class="work-details-duration">April 2015 – Oct 2015(5m)</h4>
 
                 <div class="projects-container">
-                    <h2>projects:</h2>
+                    <h2 class="projects-text">projects:</h2>
                     <div class="projects-sub-container-right">
 
                         <div>
@@ -272,7 +272,7 @@
                 <h2 class="work-details-sub-heading">iOS, Android and React-Native.</h2>
 
                 <div class="projects-container">
-                    <h2>projects:</h2>
+                    <h2 class="projects-text">projects:</h2>
                     <div class="projects-sub-container-right">
 
                         <div>
@@ -317,11 +317,14 @@
 
 
         <div id="hobbies">
-            <h1 class="section-heading main-heading">Hobbies:</h1>
+            <h1 class=" main-heading">Hobbies:</h1>
 
             <ul>
-                <li>
+                <li class="hobbies-title">
                     <h1>Cycling</h1>
+                    <p class="hobbies-description">I recently started cycling as an alternative for exercise, but now it
+                        kind of changed into a hobby
+                        which I could not let go.</p>
                 </li>
             </ul>
 
