--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <h1>Hey there...</h1>
             <p id="name">SARAVANA KUMAR K R</p>
-            <p id="about-me">Mobile application developer with 4y 9m experience</p>
+            <p id="about-me">Mobile application developer</p>
         </div>
 
         <div id="education-details">
@@ -60,27 +60,26 @@
             <div>
                 <h1 class="education-sub-heading">B.Tech - Computer Science - from Kerala University</h1>
                 <h2 class="education-description"> I studied at UKF College of Engineering and Technology affiliated to
-                    Kerala University and secured
-                    a score of 6.3 CGPA</h2>
+                    Kerala University.</h2>
             </div>
 
             <div>
                 <h1 class="education-sub-heading">12th - Science - Maths -Computer Science - CBSE</h1>
-                <h2 class="education-description"> I studied at Sree Narayana Trusts Central School, Kollam securing
-                    a score of 67%</h2>
+                <h2 class="education-description"> I studied at Sree Narayana Trusts Central School, Kollam.</h2>
             </div>
 
             <div>
                 <h1 class="education-sub-heading">10th - Science - Maths - CBSE</h1>
-                <h2 class="education-description"> I studied at Sree Narayana Trusts Central School, Kollam securing
-                    a score of 77%</h2>
+                <h2 class="education-description"> I studied at Sree Narayana Trusts Central School, Kollam.</h2>
             </div>
         </div>
 
         <div id="work-details">
             <h1 class=" main-heading">Work Details:</h1>
             <div>
-                <h1 class="work-details-sub-heading">Experion Technologies, Technopark, Trivandrum</h1>
+                <a href="https://www.experionglobal.com/" target="_blank">
+                    <h1 class="work-details-sub-heading">Experion Technologies, Technopark, Trivandrum</h1>
+                </a>
                 <h2 class="work-details-sub-heading">Mobile Application Developer</h2>
                 <h4 class="work-details-duration">Feb 2019 - present(1y 1m)</h4>
 
@@ -95,10 +94,11 @@
                                 the help of a virtual support partner.</h3>
 
                             <div>
-                                <a href="https://apps.apple.com/us/app/maphabit/id1466187296">
+                                <a href="https://apps.apple.com/us/app/maphabit/id1466187296" target="_blank">
                                     <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
                                 </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.maphabitmobileapp&hl=en_IN">
+                                <a href="https://play.google.com/store/apps/details?id=com.maphabitmobileapp&hl=en_IN"
+                                    target="_blank">
                                     <img style="width: 30px; height: 30px;"
                                         src="./assets/images/icons/iconAndroid.png" />
                                 </a>
@@ -112,7 +112,9 @@
 
 
             <div>
-                <h1 class="work-details-sub-heading">Zoondia Software, Technopark, Trivandrum</h1>
+                <a href="https://www.zoondia.com/" target="_blank">
+                    <h1 class="work-details-sub-heading">Zoondia Software, Technopark, Trivandrum</h1>
+                </a>
                 <h2 class="work-details-sub-heading">iOS & Android Mobile Application Developer</h2>
                 <h4 class="work-details-duration">Dec 2015 – Feb 2019(3y 3m)</h4>
 
@@ -143,7 +145,7 @@
                                 media of communication.</h3>
 
                             <div>
-                                <a href="https://apps.apple.com/il/app/bizclips/id1315696803">
+                                <a href="https://apps.apple.com/il/app/bizclips/id1315696803" target="_blank">
                                     <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
                                 </a>
 
@@ -163,11 +165,12 @@
                                 includes features like Payment Gateway.</h3>
 
                             <div>
-                                <a
-                                    href="https://apps.apple.com/us/app/%D8%AD%D8%B3%D9%86%D8%A7%D8%AA-hasanat/id1223319991">
+                                <a href="https://apps.apple.com/us/app/%D8%AD%D8%B3%D9%86%D8%A7%D8%AA-hasanat/id1223319991"
+                                    target="_blank">
                                     <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
                                 </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.applab.hasanat&hl=en_IN">
+                                <a href="https://play.google.com/store/apps/details?id=com.applab.hasanat&hl=en_IN"
+                                    target="_blank">
                                     <img style="width: 30px; height: 30px;"
                                         src="./assets/images/icons/iconAndroid.png" />
                                 </a>
@@ -186,10 +189,12 @@
                                 includes features like Payment Gateway.</h3>
 
                             <div>
-                                <a href="https://apps.apple.com/us/app/qatar-cancer-society/id1448365698">
+                                <a href="https://apps.apple.com/us/app/qatar-cancer-society/id1448365698"
+                                    target="_blank">
                                     <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
                                 </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.applab.QCS&hl=en_US">
+                                <a href="https://play.google.com/store/apps/details?id=com.applab.QCS&hl=en_US"
+                                    target="_blank">
                                     <img style="width: 30px; height: 30px;"
                                         src="./assets/images/icons/iconAndroid.png" />
                                 </a>
@@ -202,7 +207,7 @@
                                 stores.</h3>
 
                             <div>
-                                <a href="https://apps.apple.com/ae/app/yougotagift-com/id1003784085">
+                                <a href="https://apps.apple.com/ae/app/yougotagift-com/id1003784085" target="_blank">
                                     <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
                                 </a>
                             </div>
@@ -215,10 +220,11 @@
                                 chat.</h3>
 
                             <div>
-                                <a href="https://itunes.apple.com/qa/app/diethub/id1220736852?mt=8)">
+                                <a href="https://itunes.apple.com/qa/app/diethub/id1220736852?mt=8)" target="_blank">
                                     <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
                                 </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.makers.diethub">
+                                <a href="https://play.google.com/store/apps/details?id=com.makers.diethub"
+                                    target="_blank">
                                     <img style="width: 30px; height: 30px;"
                                         src="./assets/images/icons/iconAndroid.png" />
                                 </a>
@@ -232,10 +238,12 @@
                                 communication.</h3>
 
                             <div>
-                                <a href="https://itunes.apple.com/qa/app/diethub-coach/id1257393544?mt=8">
+                                <a href="https://itunes.apple.com/qa/app/diethub-coach/id1257393544?mt=8"
+                                    target="_blank">
                                     <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
                                 </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.makers.diethubcoach">
+                                <a href="https://play.google.com/store/apps/details?id=com.makers.diethubcoach"
+                                    target="_blank">
                                     <img style="width: 30px; height: 30px;"
                                         src="./assets/images/icons/iconAndroid.png" />
                                 </a>
@@ -247,7 +255,9 @@
             </div>
 
             <div>
-                <h1 class="work-details-sub-heading">DHI Logics, Kaloor, Ernakulam</h1>
+                <a href="https://www.dhisigma.com/" target="_blank">
+                    <h1 class="work-details-sub-heading">DHI Logics, Kaloor, Ernakulam</h1>
+                </a>
                 <h2 class="work-details-sub-heading">Javascript Developers</h2>
                 <h4 class="work-details-duration">April 2015 – Oct 2015(5m)</h4>
 
@@ -282,7 +292,7 @@
                                 maintenance.</h3>
 
                             <div>
-                                <a href="https://apps.apple.com/us/app/oneport/id1486790154">
+                                <a href="https://apps.apple.com/us/app/oneport/id1486790154" target="_blank">
                                     <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
                                 </a>
                             </div>
@@ -295,10 +305,11 @@
 
                             <div>
                                 <a href="https://apps.apple.com/in/app/%D9%85%D8%AD%D9%85%D9%8A%D8%A9-%D8%A7%D9%84%D
-                                8%AC%D9%86%D9%88%D8%A8/id1440043523">
+                                8%AC%D9%86%D9%88%D8%A8/id1440043523" target="_blank">
                                     <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
                                 </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.applab.aljnoub">
+                                <a href="https://play.google.com/store/apps/details?id=com.applab.aljnoub"
+                                    target="_blank">
                                     <img style="width: 30px; height: 30px;"
                                         src="./assets/images/icons/iconAndroid.png" />
                                 </a>
