Clean up to bring original behavior

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Saravana Kumar K R (RavaNar ~ Ghostly)</title>
-    <link rel="stylesheet" type="text/css" href="rootCSS.css">
-    <link rel="stylesheet" type="text/css" href="commonStyles.css">
-    <link rel="stylesheet" type="text/css" href="base-font-styles.css">
+    <link rel="stylesheet" type="text/css" href="css/commonStyles.css">
+    <link rel="stylesheet" type="text/css" href="css/base-font-styles.css">
 </head>
 
 <body>
