UI / UX: Home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Saravana Kumar K R (RavaNar ~ Ghostly)</title>
     <link rel="stylesheet" type="text/css" href="css/commonStyles.css">
     <link rel="stylesheet" type="text/css" href="css/base-font-styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 
 <body>
