--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Saravana Kumar K R (RavaNar ~ Ghostly)</title>
-    <link rel="stylesheet" type="text/css" href="rootCSS.css">
+    <link rel="stylesheet" type="text/css" href="./app/css/index.css">
     <link rel="stylesheet" type="text/css" href="commonStyles.css">
     <link rel="stylesheet" type="text/css" href="base-font-styles.css">
 </head>
