Updated design of side menu

--- a/index.html
+++ b/index.html
@@ -5,35 +5,29 @@
     <meta charset="utf-8">
     <title>Saravana Kumar K R (RavaNar ~ Ghostly)</title>
     <link rel="stylesheet" type="text/css" href="./app/css/index.css">
-    <link rel="stylesheet" type="text/css" href="commonStyles.css">
-    <link rel="stylesheet" type="text/css" href="base-font-styles.css">
+    <link rel="stylesheet" type="text/css" href="./app/css/commonStyles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./app/css/app-font.css"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mulish">
 </head>
 
 <body>
 
     <!-- Side Navigation -->
-    <div class="side-navigation-menu">
+    <div class="side-navigation-menu-container">
 
-        <div class="side-menu-item">
-            <a href="#my-profile">
-                <img class="side-menu-item-icon" src="./assets/images/icons/iconUser.png" />
-            </a>
-        </div>
+        <div class="side-navigation-menu">
 
-        <div class="side-menu-item">
-            <a href="#education-details">
-                <img class="side-menu-item-icon" src="./assets/images/icons/iconEducation.png" />
-            </a>
-        </div>
-        <div class="side-menu-item">
-            <a href="#work-details">
-                <img class="side-menu-item-icon" src="./assets/images/icons/iconWork.png" />
-            </a>
-        </div>
-        <div class="side-menu-item">
-            <a href="#hobbies">
-                <img class="side-menu-item-icon" src="./assets/images/icons/iconHobbies.png" />
-            </a>
+            <h1 class="side-menu-item side-menu-title">INDIA</h1>
+
+            <h3 class="side-menu-item side-menu-sub-title">HOME</h3>
+            <h3 class="side-menu-item side-menu-sub-title">ABOUT</h3>
+            <h3 class="side-menu-item side-menu-sub-title">Projects</h3>
+            <h3 class="side-menu-item side-menu-sub-title">Education</h3>
+            <h3 class="side-menu-item side-menu-sub-title">Work</h3>
+            <h3 class="side-menu-item side-menu-sub-title">Hobbies</h3>
+            <h3 class="side-menu-item side-menu-sub-title">Gallery</h3>
+            
+            
         </div>
 
     </div>
@@ -47,7 +41,8 @@
 
             <div
                 style=" width: 100%;  height: 100%; position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -1; opacity: 0.5;">
-                <img style="width: 100%; height: 100%; object-fit: cover;" src="./assets/images/pictures/imgPic1.jpg" />
+                <img style="width: 100%; height: 100%; object-fit: cover;"
+                    src="./app/resources/images/pictures/imgPic1.jpg" />
             </div>
 
             <h1>Hey there...</h1>
@@ -95,12 +90,13 @@
 
                             <div>
                                 <a href="https://apps.apple.com/us/app/maphabit/id1466187296" target="_blank">
-                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./app/resources/images/icons/iconApple.png" />
                                 </a>
                                 <a href="https://play.google.com/store/apps/details?id=com.maphabitmobileapp&hl=en_IN"
                                     target="_blank">
                                     <img style="width: 30px; height: 30px;"
-                                        src="./assets/images/icons/iconAndroid.png" />
+                                        src="./app/resources/images/icons/iconAndroid.png" />
                                 </a>
                             </div>
 
@@ -146,7 +142,8 @@
 
                             <div>
                                 <a href="https://apps.apple.com/il/app/bizclips/id1315696803" target="_blank">
-                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./app/resources/images/icons/iconApple.png" />
                                 </a>
 
                             </div>
@@ -167,12 +164,13 @@
                             <div>
                                 <a href="https://apps.apple.com/us/app/%D8%AD%D8%B3%D9%86%D8%A7%D8%AA-hasanat/id1223319991"
                                     target="_blank">
-                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./app/resources/images/icons/iconApple.png" />
                                 </a>
                                 <a href="https://play.google.com/store/apps/details?id=com.applab.hasanat&hl=en_IN"
                                     target="_blank">
                                     <img style="width: 30px; height: 30px;"
-                                        src="./assets/images/icons/iconAndroid.png" />
+                                        src="./app/resources/images/icons/iconAndroid.png" />
                                 </a>
                             </div>
                         </div>
@@ -191,12 +189,13 @@
                             <div>
                                 <a href="https://apps.apple.com/us/app/qatar-cancer-society/id1448365698"
                                     target="_blank">
-                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./app/resources/images/icons/iconApple.png" />
                                 </a>
                                 <a href="https://play.google.com/store/apps/details?id=com.applab.QCS&hl=en_US"
                                     target="_blank">
                                     <img style="width: 30px; height: 30px;"
-                                        src="./assets/images/icons/iconAndroid.png" />
+                                        src="./app/resources/images/icons/iconAndroid.png" />
                                 </a>
                             </div>
                         </div>
@@ -208,7 +207,8 @@
 
                             <div>
                                 <a href="https://apps.apple.com/ae/app/yougotagift-com/id1003784085" target="_blank">
-                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./app/resources/images/icons/iconApple.png" />
                                 </a>
                             </div>
                         </div>
@@ -221,12 +221,13 @@
 
                             <div>
                                 <a href="https://itunes.apple.com/qa/app/diethub/id1220736852?mt=8)" target="_blank">
-                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./app/resources/images/icons/iconApple.png" />
                                 </a>
                                 <a href="https://play.google.com/store/apps/details?id=com.makers.diethub"
                                     target="_blank">
                                     <img style="width: 30px; height: 30px;"
-                                        src="./assets/images/icons/iconAndroid.png" />
+                                        src="./app/resources/images/icons/iconAndroid.png" />
                                 </a>
                             </div>
                         </div>
@@ -240,12 +241,13 @@
                             <div>
                                 <a href="https://itunes.apple.com/qa/app/diethub-coach/id1257393544?mt=8"
                                     target="_blank">
-                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./app/resources/images/icons/iconApple.png" />
                                 </a>
                                 <a href="https://play.google.com/store/apps/details?id=com.makers.diethubcoach"
                                     target="_blank">
                                     <img style="width: 30px; height: 30px;"
-                                        src="./assets/images/icons/iconAndroid.png" />
+                                        src="./app/resources/images/icons/iconAndroid.png" />
                                 </a>
                             </div>
                         </div>
@@ -293,7 +295,8 @@
 
                             <div>
                                 <a href="https://apps.apple.com/us/app/oneport/id1486790154" target="_blank">
-                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./app/resources/images/icons/iconApple.png" />
                                 </a>
                             </div>
                         </div>
@@ -306,12 +309,13 @@
                             <div>
                                 <a href="https://apps.apple.com/in/app/%D9%85%D8%AD%D9%85%D9%8A%D8%A9-%D8%A7%D9%84%D
                                 8%AC%D9%86%D9%88%D8%A8/id1440043523" target="_blank">
-                                    <img style="width: 30px; height: 30px;" src="./assets/images/icons/iconApple.png" />
+                                    <img style="width: 30px; height: 30px;"
+                                        src="./app/resources/images/icons/iconApple.png" />
                                 </a>
                                 <a href="https://play.google.com/store/apps/details?id=com.applab.aljnoub"
                                     target="_blank">
                                     <img style="width: 30px; height: 30px;"
-                                        src="./assets/images/icons/iconAndroid.png" />
+                                        src="./app/resources/images/icons/iconAndroid.png" />
                                 </a>
                             </div>
                         </div>
